@@ -1,5 +1,7 @@
 0.06
  - Unify LICENSE AND COPYRIGHT section in doc.
+ - Update minimal dependency to Plack::Component::Tags::HTML@0.06 with
+   <viewport> element and fix test for this new version.
 
 0.05 2022-05-13T18:14:17+02:00
  - Add image of example #1 web app to doc.
